<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="application_name" translatable="false">
		Bus Time
	</string>

	<string name="title_routes">Routes</string>
	<string name="title_stations">Stations</string>
	<string name="title_timetable">Timetable</string>

	<string name="empty_routes">No routes.</string>
	<string name="empty_stations">No stations.</string>
	<string name="empty_timetable">Timetable is empty.</string>

	<string name="menu_stations_map">Stations map</string>
	<string name="menu_update_information">Update information</string>
	<string name="menu_search_stations">Search stations</string>
	<string name="menu_current_location">Current location</string>
	<string name="menu_rate_application">Rate the application</string>
	<string name="menu_send_feedback">Send feedback</string>
	<string name="menu_timetable_type">Timetable type</string>
	<string name="menu_timetable_type_workdays">Workdays</string>
	<string name="menu_timetable_type_weekend">Weekend</string>
	<string name="menu_stations_order">Stations order</string>
	<string name="menu_stations_order_route">Route</string>
	<string name="menu_stations_order_name">Name</string>
	<string name="menu_routes_order">Routes order</string>
	<string name="menu_routes_order_bus_time">Bus time</string>
	<string name="menu_routes_order_name">Name</string>

	<string name="search_hint">Search stations</string>

	<string name="loading_routes">Loading routes…</string>
	<string name="loading_stations">Loading stations…</string>
	<string name="loading_timetable">Loading timetable…</string>
	<string name="loading_update">Updating…</string>

	<string name="warning_update_available">Update available</string>

	<string name="error_unspecified">Ooops, some error just happened!</string>
	<string name="error_connection">No internet connection found</string>
	<string name="error_maps">Your device doesn’t support maps, sorry.</string>

	<string name="token_time_now">right now</string>
	<string name="token_no_trips">no trips today left</string>

	<string name="mask_route_stations_subtitle">%1$s • %2$s</string>
	<string name="mask_station_routes_subtitle">%1$s — %2$s</string>

	<string name="placeholder_empty_direction">—</string>

</resources>
