<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:bustime="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_search_stations"
		android:icon="@drawable/ic_menu_search"
		android:title="@string/menu_search_stations"
		bustime:showAsAction="always"/>

	<item
		android:id="@+id/menu_update_information"
		android:icon="@drawable/ic_menu_update"
		android:title="@string/menu_update_information"
		bustime:showAsAction="always"
		android:visible="false"/>

	<item
		android:id="@+id/menu_stations_map"
		android:icon="@drawable/ic_menu_map"
		android:title="@string/menu_stations_map"
		bustime:showAsAction="always"/>

	<item
		android:id="@+id/menu_rate_application"
		android:title="@string/menu_rate_application"
		bustime:showAsAction="never"/>

	<item
		android:id="@+id/menu_send_feedback"
		android:title="@string/menu_send_feedback"
		bustime:showAsAction="never"/>

</menu>
